// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> accepts a style prop 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: hsl(0,0%,100%);
  color: hsl(0,0%,10%);
  font-size: 14px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  background: #f2f2f2;
  color: hsl(240,20%,30%);
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  Submit
</button>
`;

exports[`<Button /> snapshots renders danger 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: #c7254e;
  color: hsl(0,0%,100%);
  font-size: 14px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  background: #b12146;
  color: hsl(0,0%,100%);
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
>
  Danger
</button>
`;

exports[`<Button /> snapshots renders default 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: hsl(0,0%,100%);
  color: hsl(0,0%,10%);
  font-size: 14px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  background: #f2f2f2;
  color: hsl(240,20%,30%);
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
>
  Submit
</button>
`;

exports[`<Button /> snapshots renders disabled 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: hsl(0,0%,96%);
  color: hsl(0,0%,45%);
  font-size: 14px;
  cursor: not-allowed;
}

.c0:hover {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  background: hsl(0,0%,96%);
  color: hsl(0,0%,45%);
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
>
  Disabled
</button>
`;

exports[`<Button /> snapshots renders primary 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: hsl(191,100%,35%);
  color: hsl(0,0%,100%);
  font-size: 14px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  background: #007d9a;
  color: hsl(0,0%,100%);
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
>
  Primary
</button>
`;

exports[`<Button /> snapshots renders selected 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0px 0px 2px 2px hsl(240,20%,60%);
  background: hsl(0,0%,100%);
  color: hsl(0,0%,10%);
  font-size: 14px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  background: #f2f2f2;
  color: hsl(240,20%,30%);
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
>
  Selected
</button>
`;
